--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Contact Us</title>
+    <p>This is my git</p>
 </head>
 <body>
     <h1>Contact Us</h1>
-    <p>This is my first class</p>
 </body>
 </html>
