try try but dont cry

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="style.css">
     <title>Contact Us</title>
     <p>This is my git</p>
+    <p>This is my git</p>
 </head>
 <body>
-    <h1>Contact Us</h1>
 </body>
 </html>
