updated some code

--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <title>Contact Us</title>
 </head>
 <body>
-    <h1>Contact Us</h1>
-    <p>This is my first class</p>
+    <div class="mainbox">
+        <div class="1stbox">
+            <div class="line1"><h1>Essential Fields</h1></div>
+            <h2>IN CONTECT FORM</h2>
+
+        </div>
+        <div class="2ndbox"></div>
+    </div>
+
 </body>
 </html>
