--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 <body>
     <div class="mainbox">
         <div class="1stbox">
-            <div class="line1"><h1>Essential Fields</h1></div>
-            <h2>IN CONTECT FORM</h2>
+            <div class="line1"> <h1><span class="number1">3</span> Essential Fields</h1></div>
+            <h2> IN CONTECT FORM</h2>
+            <div class="2ndline">
+                <span>1<hr width="50%" height="6"></span>
+            </div>
+         </div>
 
-        </div>
         <div class="2ndbox"></div>
     </div>
 
