--- a/index.html
+++ b/index.html
@@ -8,15 +8,27 @@
 </head>
 <body>
     <div class="mainbox">
-        <div class="1stbox">
-            <div class="line1"> <h1><span class="number1">3</span> Essential Fields</h1></div>
-            <h2> IN CONTECT FORM</h2>
-            <div class="2ndline">
-                <span>1<hr width="50%" height="6"></span>
+        <div class="fristbox">
+            <div class="line1"> 
+            <h1><span class="number1">3</span> ESSENTIAL FIELDS</h1>
+            <h2> IN CONTECT FORMS</h2>
             </div>
+                <div class="container">
+                    <div class="circle">1</div>
+                    <div class="line"></div>
+                </div>
+                <div class="container">
+                    <div class="circle">1</div>
+                    <div class="line"></div>
+                </div>
+                <div class="container">
+                    <div class="circle">1</div>
+                    <div class="line"></div>
+                </div>
          </div>
 
-        <div class="2ndbox"></div>
+        <div class="secondbox">
+        </div>
     </div>
 
 </body>
