--- a/index.html
+++ b/index.html
@@ -5,9 +5,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Contact Us</title>
-    <p>This is my git</p>
-    <p>This is my git</p>
 </head>
 <body>
+    <div class="mainbox">
+        <div class="fristbox">
+            <div class="innerbox">
+                <div class="line1"> 
+                    <h1><span class="number1">3</span> ESSENTIAL FIELDS</h1>
+                    <h2> IN CONTACT FORMS</h2>
+                </div>
+                <div class="container">
+                    <div class="circle">1</div>
+                    <div class="line"></div>
+                    <h2>Name</h2>
+                </div>
+                <div class="container">
+                    <div class="circle">2</div>
+                    <div class="line"></div>
+                    <h2 id="email">Email&nbspaddress</h2>
+                </div>
+                <div class="container">
+                    <div class="circle">3</div>
+                    <div class="line"></div>
+                    <h2>Message</h2>
+                </div>
+            </div>
+        </div>
+
+        <div class="form-container">
+            <h1 class="form-heading gradient-text">Contact Form</h1>
+            <div class="forminfo">
+                <form action="your-action-url" method="post" class="formbox">
+                    <div class="form-group" id="twobox">
+                        <input type="text" id="firstname" name="firstname" placeholder="First Name">
+                        <input type="text" id="lastname" name="lastname" placeholder="Last Name">
+                    </div>
+                    <div class="form-group">
+                        <input type="email" id="email" name="email" placeholder="saugata@gmail.com">
+                    </div>
+                    <div class="form-group">
+                        <select name="method" id="method">
+                            <option value="">Preferred method of contact</option>
+                            <option value="message">Email</option>
+                            <option value="call">call</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <textarea name="message" id="message" placeholder="Message"></textarea>
+                    </div>
+                    <button class="button">SEND MESSAGE</button>
+                </form>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
