--- a/index.html
+++ b/index.html
@@ -35,33 +35,36 @@
          </div>
 
         <div class="secondbox">
+            <form action="" class="form">
+              <h1 class="title">Contact Form</h1>
+              <div class="form-group">
+                <label for="">
+                  <input type="text" required>
+                  <span>Fristname</span>
+                </label>
+                <label for="">
+                  <input type="text" required>
+                  <span>Lastname</span>
+                </label>
+                <label for="">
+                  <input type="email" required>
+                  <span>Email</span>
+                </label>
+                <label for="">
+                  <select name="" id="">
+                    <option value="#">Prefreed method of contact</option>
+                    <option value="#">Computer</option>
+                    <option value="#">Mobile</option>
+                  </select>
+                </label>
+                <label for="">
+                  <textarea name="" id=""></textarea>
+                  <span>Message</span>
+                </label>
+                <button class="sendmessage">SEND MESSAGE</button>
+              </div>
+            </form>
             
-            <div class="formcontainer">
-                <h1 class="formheading">
-                    Contact Form
-                </h1>
-                <div class="forminfo">
-
-                    <form action="post" class="formbox">
-                        <div class="form-group" id="twobox">
-                            <input type="text" id="firstname" name="fristname" placeholder="Frist Name">
-                            <input type="text" id="lastname" name="lastname" placeholder="Last Name">
-                        </div>
-                        <div class="form-group">
-                            <input type="email" id="email" name="email" placeholder="johndoe@gmail.com">
-                        </div>
-                        <div class="form-group">
-                            <select name="method" id="method">
-                                <option value="">Prefered method of contact</option>
-                                <option value="message">message</option>
-                                <option value="call">call</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <textarea name="message" id="message" placeholder="Message"></textarea>
-                        </div>
-                        <button class="button">SEND MESSAGE</button>
-                    </form>
                 </div>
                 <!-- <svg class= "wave2"width="100%" height="50%" id="svg" viewBox="0 0 1440 690" xmlns="http://www.w3.org/2000/svg" class="transition duration-300 ease-in-out delay-150"><style>
                     .path-0{
