--- a/lugx.html
+++ b/lugx.html
@@ -4,26 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylelugx.css">
-    <title>Contact Us</title>
+    <title>LUX GAMING SETUP PAGE</title>
 </head>
 <body>
-    <nav class="navbar">
-        <div class="nav-container">
-            <div class="logo">Logo</div>
-            <ul class="nav-links">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#shop">Our Shop</a></li>
-                <li><a href="#product-details">Product Details</a></li>
-                <li><a href="#contact-us">Contact Us</a></li>
-                <li><a href="#sign-up" class="sign-up-button">Sign Up</a></li>
-            </ul>
-            <button class="menu-toggle">
-                <span></span>
-                <span></span>
-                <span></span>
-            </button>
-        </div>
-    </nav>
-    <!-- Rest of your content -->
+    <!-- navbar section  -->
+    <header>
+            <img src="favicon.png" alt="Logo" class="logo">
+            <nav class="navbar">
+                <ul class="nav_links">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Our Shop</a></li>
+                    <li><a href="#">Product Details</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </nav>
+            <a href="" class="cta"><button class="button">Sign in</button></a>
+    </header>
+    <!-- body section  -->
+     <section class = "first1">
+        <div class="cointainer">
+            <div class = "mainbg">
+                <div class="mainbg_content">
+                    <div class ="content.text">
+                         <h2>WELCOME TO LUGX</h2>
+                    <h1> beta EVER GAMING </h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, exercitationem? Sunt, eos laborum obcaecati porro soluta voluptatem libero quod ratione molestiae voluptas incidunt maiores iste! Aliquid tenetur veritatis quis nobis.</p>
+                </div>
+                <div class ="searchnow">
+                    <input type ="text" name ="text"placeholder="TYING" > <button>Search Now</button>   
+                </div>
+                </div>
+            </div>     
+            <div class="banner">
+                <div class="rightside_img">
+                    <span class="price">$22</span>
+                    <img src="MV5BOWM3YjRkM2MtZmU3My00OTc4LTg0MDMtMmEzYjc3NWNjMjIxXkEyXkFqcGc@.jpg" alt="">
+                    <span class="offer">-40%</span>
+</div>
+                 
+     
 </body>
 </html>
+
+
