--- a/lugx.html
+++ b/lugx.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <!-- navbar section -->
     <header>
         <img src="xbox-seeklogo.png" alt="Logo" class="logo">
         <nav class="navbar">
@@ -20,5 +21,33 @@
         </nav>
         <a href="" class="cta"><button class="button">Sign in</button></a>
     </header>
+
+    <!-- !st section -->
+    <section class="fristsection">
+        <div class="container">
+            <div class="main_banner">
+                <div class="main_banner_content">
+
+                    <div class="contant_rapper">
+                        <h2>WELCOME TO LUCK</h2>
+                        <h1>BEST GAMING SITE EVER</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora dolorem, nam deserunt omnis numquam sunt? Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus nemo natus mollitia cumque laborum at id ducimus ad corrupti nesciunt?</p>
+                    </div>
+                    <div class="main_banner_searchbutton">
+                        <input type="text" name="text" id="text" placeholder="Type Something....">
+                        <button>Search Now</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="main_banner_img">
+                <div class="right_img">
+                    <span class="price">$22</span>
+                    <img src="banner-image.jpg" alt="">
+                    <span class="offer">-40%</span>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
