--- a/lugx.html
+++ b/lugx.html
@@ -10,7 +10,7 @@
 <body>
     <!-- navbar section -->
     <header>
-        <img src="xbox-seeklogo.png" alt="Logo" class="logo">
+        <img src="icons8-xbox-500.png" alt="Logo" class="logo">
         <nav class="navbar">
             <ul class="nav_links">
                 <li><a href="#">Home</a></li>
