--- a/lugx.html
+++ b/lugx.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="lugx.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <title>Document</title>
 </head>
 
@@ -35,7 +36,7 @@
                     </div>
                     <div class="main_banner_searchbutton">
                         <input type="text" name="text" id="text" placeholder="Type Something....">
-                        <button>Search Now</button>
+                        <button class="searchbutton">Search Now</button>
                     </div>
                 </div>
             </div>
@@ -47,7 +48,43 @@
                     <span class="offer">-40%</span>
                 </div>
             </div>
+        </section>
+        <div class="boxcollection">
+            <div class="boxcollectionboxes">
+                <div class="innerbox">
+                    <div class="icons">
+                        <i class="fa-solid fa-circle-user" ></i>
+                    </div>
+                    <h3>Free Storage</h3>
+                </div>
+               
+            </div>
+            <div class="boxcollectionboxes">
+                <div class="innerbox">
+                    <div class="icons">
+                        <i class="fa-solid fa-circle-user" ></i>
+                    </div>
+                    <h3>User mode</h3>
+                </div>
+            </div>
+            <div class="boxcollectionboxes">
+                <div class="innerbox">
+                    <div class="icons">
+                        <i class="fa-solid fa-circle-play"></i>
+                    </div>
+                    <h3>Play ready</h3>
+                </div>
+            </div>
+            <div class="boxcollectionboxes">
+                <div class="innerbox">
+                    <div class="icons">
+                        <i class="fa-solid fa-circle-user" ></i>
+                    </div>
+                    <h3>Easy Layout</h3>
+                </div>
+
+            </div>
         </div>
-    </section>
+    </div>
 </body>
 </html>
