--- a/lugx.html
+++ b/lugx.html
@@ -86,5 +86,37 @@
             </div>
         </div>
     </div>
+    <section class="section2">
+        <h6>TRENDING</h6>
+        <h2>Trending Games</h2>
+        <div class="trendinggamesection">
+            <div class="gameoption">
+                <div class="gameoptionimage">
+                    <img src="Game.jpg" alt="" class="imagephoto">
+                </div>
+                <div class="gameoptiontext"></div>
+            </div>
+            <div class="gameoption">
+                <div class="gameoptionimage"></div>
+                <div class="gameoptiontext"></div>
+            </div>
+            <div class="gameoption">
+                <div class="gameoptionimage"></div>
+                <div class="gameoptiontext"></div>
+            </div>
+            <div class="gameoption">
+                <div class="gameoptionimage"></div>
+                <div class="gameoptiontext"></div>
+            </div>
+            <div class="gameoption">
+                <div class="gameoptionimage"></div>
+                <div class="gameoptiontext"></div>
+            </div>
+            <div class="gameoption">
+                <div class="gameoptionimage"></div>
+                <div class="gameoptiontext"></div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
