--- a/lugx.html
+++ b/lugx.html
@@ -86,6 +86,10 @@
             </div>
         </div>
     </div>
+
+
+    <!-- section2 -->
+
     <section class="section2">
         <h6 class="Trending">TRENDING</h6>
         <h2 class="Trending">Trending Games</h2>
