upadated the next section

--- a/lugx.html
+++ b/lugx.html
@@ -88,7 +88,7 @@
     <div class="trendinggamesection">
         <div class="gameoption">
             <div class="gameoptionimage">
-                <img src="ybRWuGmpZP8Gf67RFY5YtW-320-80.jpg" alt="" class="imagephoto">
+                <img src="backgroud.jpg" alt="" class="imagephoto">
                 <h2>$22</h2>
             </div>
 
@@ -99,7 +99,7 @@
         </div>
         <div class="gameoption">
             <div class="gameoptionimage">
-                <img src="ybRWuGmpZP8Gf67RFY5YtW-320-80.jpg" alt="" class="imagephoto">
+                <img src="prince od pp.jpeg" alt="" class="imagephoto">
                 <h2>$22</h2>
             </div>
             <div class="gameoptiontext">
@@ -109,7 +109,7 @@
         </div>
         <div class="gameoption">
             <div class="gameoptionimage">
-                <img src="ybRWuGmpZP8Gf67RFY5YtW-320-80.jpg" alt="" class="imagephoto">
+                <img src="Prince of Persia Wallpaper.jpeg" alt="" class="imagephoto">
                 <h2>$22</h2>
             </div>
             <div class="gameoptiontext">
@@ -119,7 +119,7 @@
         </div>
         <div class="gameoption">
             <div class="gameoptionimage">
-                <img src="ybRWuGmpZP8Gf67RFY5YtW-320-80.jpg" alt="" class="imagephoto">
+                <img src="spiderman.jpeg" alt="" class="imagephoto">
                 <h2>$22</h2>
             </div>
             <div class="gameoptiontext">
@@ -129,7 +129,7 @@
         </div>
         <div class="gameoption">
             <div class="gameoptionimage">
-                <img src="ybRWuGmpZP8Gf67RFY5YtW-320-80.jpg" alt="" class="imagephoto">
+                <img src="Venom 🖤👽.jpeg" alt="" class="imagephoto">
                 <h2>$22</h2>
             </div>
             <div class="gameoptiontext">
@@ -139,7 +139,7 @@
         </div>
         <div class="gameoption">
             <div class="gameoptionimage">
-                <img src="ybRWuGmpZP8Gf67RFY5YtW-320-80.jpg" alt="" class="imagephoto">
+                <img src="download.jpeg" alt="" class="imagephoto">
                 <h2>$22</h2>
             </div>
             <div class="gameoptiontext">
@@ -152,7 +152,7 @@
 
 <!-- nextpart -->
 <section class="topgame__sect">
-    <div class="container">
+    <div class="container4">
         <h4 class="section__littletitle">TOP GAMES</h4>
         <div class="topgame__top-sect">
             <h2 class="section__largtitle">Most Played</h2>
@@ -200,17 +200,107 @@
                     <a href="" class="topgame__item-link">EXPLORE</a>
                 </div>
             </div>
-            <div class="topgame__items">
-                <img src="ybRWuGmpZP8Gf67RFY5YtW-320-80.jpg" alt="">
-                <div class="topgame__item-content">
-                    <h4>Adventure</h4>
-                    <h3>Assasin Creed</h3>
-                    <a href="" class="topgame__item-link">EXPLORE</a>
-                </div>
+           
             </div>
         </div>
     </div>
 </section>
+
+<!-- okokookokokokkoko -->
+<section class="categories__sect">
+    <div class="container">
+        <h4 class="section__littletitle">CATEGORIES</h4>
+        <h2 class="section__largtitle">Top Categories</h2>
+
+        <div class="category__wraper">
+            <i id="left" class="fas fa-angle-left"></i>
+            <div class="category__carousel">
+                <div class="category__card">
+                    <div class="card__content">
+                        <h3>Action</h3>
+                    </div>
+                    <div class="imagecard">
+                        <img src="Ash And Pikachu Wallpaper.jpeg" alt="" draggable="false">
+                    </div>
+                </div>
+                <div class="category__card">
+                    <div class="card__content">
+                        <h3>Action</h3>
+                    </div>
+                    <div class="imagecard">
+                    <img src="Bend the Knee or Perish.jpeg" alt="" draggable="false">
+                </div>
+            </div>
+                <div class="category__card">
+                    <div class="card__content">
+                        <h3>Action</h3>
+                    </div>
+                    <div class="imagecard">
+                    <img src="spiderman.jpeg" alt="" draggable="false">
+                </div>
+            </div>
+                <div class="category__card">
+                    <div class="card__content">
+                        <h3>Action</h3>
+                    </div>
+                    <div class="imagecard">
+                    <img src="Venom 🖤👽.jpeg" alt="" draggable="false">
+                </div>
+            </div>
+                <div class="category__card">
+                    <div class="card__content">
+                        <h3>Action</h3>
+                    </div>
+                    <div class="imagecard">
+                    <img src="Pin on Places to visit.jpeg" alt="" draggable="false">
+                </div>
+            </div>
+                <div class="category__card">
+                    <div class="card__content">
+                        <h3>Action</h3>
+                    </div>
+                    <div class="imagecard">
+                    <img src="Kratos - God of War.jpeg" alt="" draggable="false">
+                </div>
+            </div>
+                 <div class="category__card">
+                    <div class="card__content">
+                        <h3>Action</h3>
+                    </div>
+                    <div class="imagecard">
+                    <img src="naruto.jpeg" alt="" draggable="false">
+                </div>
+            </div>
+                <div class="category__card">
+                    <div class="card__content">
+                        <h3>Action</h3>
+                    </div>
+                    <div class="imagecard">
+                    <img src="download.jpeg" alt="" draggable="false">
+                </div>
+            </div>
+                <div class="category__card">
+                    <div class="card__content">
+                        <h3>Action</h3>
+                    </div>
+                    <div class="imagecard">
+                    <img src="1st pic.jpeg" alt="" draggable="false">
+                </div>
+            </div>
+                <div class="category__card">
+                    <div class="card__content">
+                        <h3>Action</h3>
+                    </div>
+                    <div class="imagecard">
+                    <img src="MV5BOWM3YjRkM2MtZmU3My00OTc4LTg0MDMtMmEzYjc3NWNjMjIxXkEyXkFqcGc@.jpg" alt="" draggable="false">
+                </div> 
+                </div>
+            </div>
+            <i id="right" class="fas fa-angle-right"></i>
+        </div>
+    </div>
+</section>
+
 
 
 
