--- a/lugx.html
+++ b/lugx.html
@@ -88,7 +88,7 @@
     <div class="trendinggamesection">
         <div class="gameoption">
             <div class="gameoptionimage">
-                <img src="backgroud.jpg" alt="" class="imagephoto">
+                <img src="ybRWuGmpZP8Gf67RFY5YtW-320-80.jpg" alt="" class="imagephoto">
                 <h2>$22</h2>
             </div>
 
@@ -99,7 +99,7 @@
         </div>
         <div class="gameoption">
             <div class="gameoptionimage">
-                <img src="prince od pp.jpeg" alt="" class="imagephoto">
+                <img src="ybRWuGmpZP8Gf67RFY5YtW-320-80.jpg" alt="" class="imagephoto">
                 <h2>$22</h2>
             </div>
             <div class="gameoptiontext">
@@ -109,7 +109,7 @@
         </div>
         <div class="gameoption">
             <div class="gameoptionimage">
-                <img src="Prince of Persia Wallpaper.jpeg" alt="" class="imagephoto">
+                <img src="ybRWuGmpZP8Gf67RFY5YtW-320-80.jpg" alt="" class="imagephoto">
                 <h2>$22</h2>
             </div>
             <div class="gameoptiontext">
@@ -119,7 +119,7 @@
         </div>
         <div class="gameoption">
             <div class="gameoptionimage">
-                <img src="spiderman.jpeg" alt="" class="imagephoto">
+                <img src="ybRWuGmpZP8Gf67RFY5YtW-320-80.jpg" alt="" class="imagephoto">
                 <h2>$22</h2>
             </div>
             <div class="gameoptiontext">
@@ -129,7 +129,7 @@
         </div>
         <div class="gameoption">
             <div class="gameoptionimage">
-                <img src="Venom 🖤👽.jpeg" alt="" class="imagephoto">
+                <img src="ybRWuGmpZP8Gf67RFY5YtW-320-80.jpg" alt="" class="imagephoto">
                 <h2>$22</h2>
             </div>
             <div class="gameoptiontext">
@@ -139,7 +139,7 @@
         </div>
         <div class="gameoption">
             <div class="gameoptionimage">
-                <img src="download.jpeg" alt="" class="imagephoto">
+                <img src="ybRWuGmpZP8Gf67RFY5YtW-320-80.jpg" alt="" class="imagephoto">
                 <h2>$22</h2>
             </div>
             <div class="gameoptiontext">
@@ -219,82 +219,62 @@
                     <div class="card__content">
                         <h3>Action</h3>
                     </div>
-                    <div class="imagecard">
-                        <img src="Ash And Pikachu Wallpaper.jpeg" alt="" draggable="false">
-                    </div>
+                    <img src="Ash And Pikachu Wallpaper.jpeg" alt="" draggable="false">
                 </div>
                 <div class="category__card">
                     <div class="card__content">
                         <h3>Action</h3>
                     </div>
-                    <div class="imagecard">
                     <img src="Bend the Knee or Perish.jpeg" alt="" draggable="false">
                 </div>
-            </div>
                 <div class="category__card">
                     <div class="card__content">
                         <h3>Action</h3>
                     </div>
-                    <div class="imagecard">
-                    <img src="spiderman.jpeg" alt="" draggable="false">
+                    <img src="1st pic.jpeg" alt="" draggable="false">
                 </div>
-            </div>
                 <div class="category__card">
                     <div class="card__content">
                         <h3>Action</h3>
                     </div>
-                    <div class="imagecard">
                     <img src="Venom 🖤👽.jpeg" alt="" draggable="false">
                 </div>
-            </div>
                 <div class="category__card">
                     <div class="card__content">
                         <h3>Action</h3>
                     </div>
-                    <div class="imagecard">
-                    <img src="Pin on Places to visit.jpeg" alt="" draggable="false">
+                    <img src="spiderman.jpeg" alt="" draggable="false">
                 </div>
-            </div>
                 <div class="category__card">
                     <div class="card__content">
                         <h3>Action</h3>
                     </div>
-                    <div class="imagecard">
-                    <img src="Kratos - God of War.jpeg" alt="" draggable="false">
+                    <img src="naruto.jpeg" alt="" draggable="false">
                 </div>
-            </div>
                  <div class="category__card">
                     <div class="card__content">
                         <h3>Action</h3>
                     </div>
-                    <div class="imagecard">
-                    <img src="naruto.jpeg" alt="" draggable="false">
-                </div>
-            </div>
-                <div class="category__card">
-                    <div class="card__content">
-                        <h3>Action</h3>
-                    </div>
-                    <div class="imagecard">
                     <img src="download.jpeg" alt="" draggable="false">
                 </div>
-            </div>
                 <div class="category__card">
                     <div class="card__content">
                         <h3>Action</h3>
                     </div>
-                    <div class="imagecard">
-                    <img src="1st pic.jpeg" alt="" draggable="false">
+                    <img src="naruto.jpeg" alt="" draggable="false">
                 </div>
-            </div>
                 <div class="category__card">
                     <div class="card__content">
                         <h3>Action</h3>
                     </div>
-                    <div class="imagecard">
-                    <img src="MV5BOWM3YjRkM2MtZmU3My00OTc4LTg0MDMtMmEzYjc3NWNjMjIxXkEyXkFqcGc@.jpg" alt="" draggable="false">
+                    <img src="prince od pp.jpeg" alt="" draggable="false">
+                </div>
+                <div class="category__card">
+                    <div class="card__content">
+                        <h3>Action</h3>
+                    </div>
+                    <img src="Pin on Places to visit.jpeg" alt="" draggable="false">
                 </div> 
-                </div>
             </div>
             <i id="right" class="fas fa-angle-right"></i>
         </div>
