--- a/lugx.html
+++ b/lugx.html
@@ -91,7 +91,7 @@
     <!-- section2 -->
 
     <section class="section2">
-        <h6 class="Trending">TRENDING</h6>
+        <h6 class="Trendingh6">TRENDING</h6>
         <h2 class="Trending">Trending Games</h2>
         <div class="trendinggamesection">
             <div class="gameoption">
@@ -163,7 +163,7 @@
 
     <section class="section3">
         <button class="viewall">View All</button>
-        <h6 class="section3text">Most played</h6>
+        <h6 class="section3texth6">Most played</h6>
         <h2 class="section3text">Top Games</h2>
         <div class="container3">
             <div class="topgames">
