--- a/lugx.html
+++ b/lugx.html
@@ -379,6 +379,70 @@
             </div>
         </div>
     </section>
+
+    <!-- section4 -->
+
+    <section class="section4">
+        <h6>Categories</h6>
+        <h2>Top Categories</h2>
+       <div class="slider">
+        <div class="slidetrack">
+            <div class="slide">
+                <img src="Kratos fury.jpg" alt="">
+            </div>
+            <div class="slide">
+                <img src="Kratos fury.jpg" alt="">
+            </div>
+            <div class="slide">
+                <img src="Kratos fury.jpg" alt="">
+            </div>
+            <div class="slide">
+                <img src="Kratos fury.jpg" alt="">
+            </div>
+            <div class="slide">
+                <img src="Kratos fury.jpg" alt="">
+            </div>
+            <div class="slide">
+                <img src="Kratos fury.jpg" alt="">
+            </div>
+            <div class="slide">
+                <img src="Kratos fury.jpg" alt="">
+            </div>
+            <div class="slide">
+                <img src="Kratos fury.jpg" alt="">
+            </div>
+            <div class="slide">
+                <img src="Kratos fury.jpg" alt="">
+            </div>
+            <div class="slide">
+                <img src="Kratos fury.jpg" alt="">
+            </div>
+        </div>
+       </div>
+    </section>
+
+    <!-- section5 -->
+
+    <section class="section5">
+            <div class="fristboxsection5">
+                <h6>Our Shop</h6>
+                <h2>Go Pre-Order Buy &Get Best <span>Prices</span> For You!</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus vel nostrum nam ipsa est optio!</p>
+                <button>SHOP NOW</button>
+            </div>
+            <div class="secondboxsection5">
+                <img src="Kratos fury.jpg" alt="">
+            </div>
+            <div class="thirdboxsection5">
+                <h6>NEWSLETTER</h6>
+                <h2>Get Up To $100 off Just Buy <span>Subscribe</span>Newsletter</h2>
+                <div class="buttonlast">
+                    <input type="text" name="" placeholder="Your Email">
+                    <button>SUBSCRIBE</button>
+                </div>
+            </div>
+        
+    </section>
 </body>
 <script src="lugx.js"></script>
 
