--- a/lugx.html
+++ b/lugx.html
@@ -385,36 +385,40 @@
     <section class="section4">
         <h6>Categories</h6>
         <h2>Top Categories</h2>
-       <div class="slider">
+       <div class="slider" style="
+        --width:32rem ;
+        --height:30rem; 
+        --quantity:10;
+       ">
         <div class="slidetrack">
-            <div class="slide">
+            <div class="slide" style="--position: 1">
                 <img src="Kratos fury.jpg" alt="">
             </div>
-            <div class="slide">
+            <div class="slide" style="--position: 2">
                 <img src="Kratos fury.jpg" alt="">
             </div>
-            <div class="slide">
+            <div class="slide" style="--position: 3">
                 <img src="Kratos fury.jpg" alt="">
             </div>
-            <div class="slide">
+            <div class="slide" style="--position: 4">
                 <img src="Kratos fury.jpg" alt="">
             </div>
-            <div class="slide">
+            <div class="slide" style="--position: 5">
                 <img src="Kratos fury.jpg" alt="">
             </div>
-            <div class="slide">
+            <div class="slide" style="--position: 6">
                 <img src="Kratos fury.jpg" alt="">
             </div>
-            <div class="slide">
+            <div class="slide" style="--position: 7">
                 <img src="Kratos fury.jpg" alt="">
             </div>
-            <div class="slide">
+            <div class="slide" style="--position: 8">
                 <img src="Kratos fury.jpg" alt="">
             </div>
-            <div class="slide">
+            <div class="slide" style="--position: 9">
                 <img src="Kratos fury.jpg" alt="">
             </div>
-            <div class="slide">
+            <div class="slide" style="--position: 10">
                 <img src="Kratos fury.jpg" alt="">
             </div>
         </div>
