--- a/lugx.html
+++ b/lugx.html
@@ -33,7 +33,7 @@
                 </div>
                 <div class ="searchnow">
               <!-- <div class = "buttoneffect">  -->
-                 <input type="text" name ="text"placeholder="TYING" > <button class="jakmak">Search Now</button>   
+                 <input type="text" name ="text"placeholder="Typing..." > <button class="jakmak">Search Now</button>   
                 </div>
                 </div>
             </div>     
@@ -324,25 +324,39 @@
         </div>
     </div>
 </section>
-<!-- footer section -->
 
-<footer>
-<div class="cointainer0">
-        <div class="copy__right">
-            <!-- <h3 class="webdeveloper">Website developer : <a href="#">gugu</a></h3> -->
-            <!-- <h3 class="disignby">Dsign by : <a href="#">TemplateMo</a></h3> -->
-        </div>
-    </div>
-
-
-
-
-
-
-</footer>
-
-
-
+<!-- footer  -->
+ 
+     <footer class="footer">
+         <div class="footer-container">
+             <div class="footer-section about">
+                 <h2>About Us</h2>
+                 <p>LUGX Gaminng Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus iusto tempora reiciendis debitis doloribus rerum inventore, necessitatibus neque aperiam, labore ex laudantium facere eius accusantium quis eligendi possimus ducimus. Pariatur?sot</p>
+             </div>
+             <div class="footer-section links">
+                 <h2>Quick Links</h2>
+                 <ul>
+                     <li><a href="#home">Home</a></li>
+                     <li><a href="#shop">Our Shop</a></li>
+                     <li><a href="#product-details">Product Details</a></li>
+                     <li><a href="#contact-us">Contact Us</a></li>
+                 </ul>
+             </div>
+             <div class="footer-section contact">
+                 <h2>Contact Us</h2>
+                 <ul>
+                     <li>Email: lugx@example.com</li>
+                     <li>Phone: +91 123 456 7890</li>
+                     <li>Address: 1007 Mountain Drive, Gotham City, U.S.A</li>
+                 </ul>
+             </div>
+         </div>
+         <div class="footer-bottom">
+             <p>&copy; 2025 Your Company. All rights reserved.</p>
+         </div>
+     </footer>
+ </body>
+ </html>
 
 
 
