--- a/lugx.html
+++ b/lugx.html
@@ -10,18 +10,29 @@
 
 <body>
     <!-- navbar section -->
-    <header>
-        <img src="icons8-xbox-500.png" alt="Logo" class="logo">
-        <nav class="navbar">
-            <ul class="nav_links">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Our Shop</a></li>
-                <li><a href="#">Product Details</a></li>
-                <li><a href="#">Contact Us</a></li>
-            </ul>
-        </nav>
-        <a href="" class="cta"><button class="button">Sign in</button></a>
-    </header>
+<header>
+    <div class="navbar">
+        <div class="logo"><a href="#"><img src="icons8-xbox-500.png" alt="">LUGX</a></div>
+        <ul class="links">
+            <li> <a href="#">Home</a></li>
+            <li> <a href="#">Our shop</a></li>
+            <li> <a href="#">Product Details</a></li>
+            <li> <a href="#">Contact Us</a></li>
+        </ul>
+        <a href="#" class="action_btn">SIGN IN</a>
+        <div class="toggle_btn">
+            <i class="fa-solid fa-bars"></i>
+        </div>
+    </div>
+    <div class="dropdownmenu">
+        <li> <a href="">Home</a></li>
+        <li> <a href="">Our shop</a></li>
+        <li> <a href="">Product Details</a></li>
+        <li> <a href="">Contact Us</a></li>
+        <a href="#" class="action_btn">SIGN IN</a>
+    </div>
+</header>
+
 
     <!-- !st section -->
     <section class="fristsection">
