--- a/lugx.html
+++ b/lugx.html
@@ -61,6 +61,8 @@
             </div>
         </section>
 
+<!-- lowersection -->
+
         <div class="boxcollection">
             <div class="boxcollectionboxes">
                 <div class="innerbox">
@@ -106,6 +108,7 @@
         <h6 class="Trendingh6">TRENDING</h6>
         <h2 class="Trending">Trending Games</h2>
         <div class="trendinggamesection">
+
             <div class="gameoption">
                 <div class="gameoptionimage">
                     <img src="4522782.jpg" alt="" class="imagephoto">
@@ -527,7 +530,7 @@
             </div>
         </div>
     </section>
-    <footer>
+    <!-- <footer>
         <div class="footer1">
             <div class="logolast">
                 <img src="icons8-xbox-500.png" alt="Logo" class="logo">
@@ -542,7 +545,7 @@
             </div>
         </div>
         <p>&copy; 2025 Your Company.All rights reserved</p>
-    </footer>
+    </footer> -->
 </body>
 <script src="lugx.js"></script>
 
